fdo#74654 fix typo: printnone -> printhigh

Change-Id: I286dedfb6dfd8d9c119bf1b6ac777a2a08f22d7e